# signal-validation

./: .gitignore  HONEST_STATUS.md  LICENSE  README.md  pyproject.toml  requirements.txt  results.json
scripts/: run_study.py
src/signalval/: __init__.py  backtest.py  data.py  signals.py  stats.py
tests/: test_no_lookahead.py
